<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_name">HyppoTunes</string>
    <string name="search_button">search button</string>
    <string name="navigation_button">navigation button</string>
    <string name="search_song">Search song</string>
    <string name="downloaded">Downloaded</string>
    <string name="browse">Browse</string>
    <string name="browse_songs">Songs</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="placeholder">placeholder</string>
    <string name="search_history_item_image">search_history_item_image</string>
    <string name="play_song_button">play_song_button</string>
    <string name="default_player_time_start">0:00</string>
    <string name="default_player_song">Loading song…</string>
    <string name="player_image">player_image</string>
    <string name="default_player_time_end">0:00</string>
    <string name="player_pause_play_button">player_pause_play_button</string>
    <string name="player_fast_rewind_button">player_fast_rewind_button</string>
    <string name="player_fast_forward_button">player_fast_forward_button</string>
    <string name="player_header">Now playing</string>
    <string name="default_player_song_header">Loading…</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear">Clear…</string>
    <string name="delete_search_history_button">delete_search_history_button</string>
    <string name="mixed_songs">Browse</string>
    <string name="hyppotunes">HyppoTunes</string>
    <string name="play_pause_notification_button">Play_pause_notification_button</string>
    <string name="fast_rewind_notification_button">Fast_rewind_notification_button</string>
    <string name="fast_forward_notification_button">Fast_forward_notification_button</string>
    <string name="close_notification_button">Close_notification_button</string>
    <string name="stop_player_button">Stop player button</string>
    <string name="loop_player_button">Loop player button</string>
    <string name="_1_0_2">1.0.2</string>
    <string name="version">Version:</string>
    <string name="logo">logo</string>
    <string name="copyright_2021">© Copyright 2021</string>
    <string name="licenser">Hristo Gochev</string>
    <string name="licensed_to">Licensed to:</string>
    <string name="browse_mixed_songs">Browse mixed songs</string>
    <string name="browse_remote">Remote</string>
    <string name="browse_local">Local</string>
    <string name="no_songs_found">No tracks found!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>