<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".presentation.player.PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:contentDescription="@string/navigation_button"
            android:src="@drawable/ic_baseline_arrow_back_bigger_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:ellipsize="marquee"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:shadowColor="@color/dark_gray"
            android:shadowDx="1.1"
            android:shadowDy="1.1"
            android:shadowRadius="0.8"
            android:singleLine="true"
            android:text="@string/player_header"
            android:textAlignment="center"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/delete_song_button"
            app:layout_constraintStart_toEndOf="@id/back_button2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:shadowColor="@color/dark_gray"
            android:shadowDx="1.1"
            android:shadowDy="1.1"
            android:shadowRadius="0.8"
            android:singleLine="true"
            android:text="@string/default_player_song_header"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/delete_song_button"
            app:layout_constraintStart_toEndOf="@id/back_button2"
            app:layout_constraintTop_toBottomOf="@+id/player_header" />

        <ImageButton
            android:id="@+id/delete_song_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:contentDescription="@string/navigation_button"
            android:src="@drawable/ic_baseline_delete_bigger_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/player_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/player_image"
        android:src="@drawable/note_image"
        app:layout_constraintBottom_toTopOf="@+id/player_song_name_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />

    <TextView
        android:id="@+id/player_song_name_artist"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ellipsize="marquee"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:shadowColor="@color/dark_gray"
        android:shadowDx="1.1"
        android:shadowDy="1.1"
        android:shadowRadius="0.8"
        android:singleLine="true"
        android:text="@string/default_player_song"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/player_time_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/player_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/player_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"

            android:text="@string/default_player_time_start"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_time_seek_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/player_time_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progressTint="@color/pink"
            android:thumbTint="@color/pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_time_end"
            app:layout_constraintStart_toEndOf="@id/player_time_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"

            android:text="@string/default_player_time_end"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_time_seek_bar"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/player_stop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:contentDescription="@string/stop_player_button"
            android:src="@drawable/ic_baseline_stop_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/player_fast_rewind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/player_fast_rewind"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/transparent"
            android:contentDescription="@string/player_fast_rewind_button"
            android:src="@drawable/ic_baseline_fast_rewind_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_play_pause"
            app:layout_constraintStart_toEndOf="@id/player_stop"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/player_play_pause"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/transparent"
            android:contentDescription="@string/player_pause_play_button"
            android:src="@drawable/ic_baseline_play_circle_outline_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_play_fast_forward"
            app:layout_constraintStart_toEndOf="@id/player_fast_rewind"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/player_play_fast_forward"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/transparent"
            android:contentDescription="@string/player_fast_forward_button"
            android:src="@drawable/ic_baseline_fast_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/player_loop"
            app:layout_constraintStart_toEndOf="@id/player_play_pause"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/player_loop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:contentDescription="@string/loop_player_button"
            android:src="@drawable/ic_baseline_loop_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_play_fast_forward"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>